--- a/.github/workflows/deploy-to-kubernetes.yml
+++ b/.github/workflows/deploy-to-kubernetes.yml
@@ -30,7 +30,7 @@ jobs:
         uses: azure/k8s-set-context@v2
         with:
           method: service-account
-          k8s-url: https://kubernetes.default.svc.j-burg11.dev:6443
+          k8s-url: https://j-burg11.dev:7443
           k8s-secret: $SERIVCE_ACCOUNT_SECRET
       - name: Deploy
         uses: Azure/k8s-deploy@v1.4
